1. Fix > Layout problem on the third element of actions list 2. Add > Style rules for testimonials components 3. Add > Style rules for works partial including animation

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -50,6 +50,7 @@
     align-items: center;
   } // -> .nav-social__icon-box
 } // -> .nav-social
+
 /* =====================================================================
   -> MAIN
 ===================================================================== */
@@ -66,13 +67,18 @@
   &__item {
     display: flex;
     align-items: center;
+
+    &--read {
+      flex-direction: column;
+      align-items: flex-start;
+    }
   }
 }
 
 /* =====================================================================
   -> IMAGES
 ===================================================================== */
-.images {
+.works {
   grid-row: 1 / 3;
   grid-column: 10 / -1;
 
