--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -20,6 +20,7 @@
   &__item {
     background: none no-repeat left top;
     background-image: url('../images/brandmark__bullet.svg');
+    background-position: 0 6px;
 
     padding-left: 1.5rem;
     margin-bottom: 1rem;
